syntax = "proto3";

option go_package = "github.com/llamerada-jp/colonio-seed/seed/core";

import "core/core.proto";

package colonio.SeedAccessorProtocol;

message SeedAccessor {
  core.NodeID dst_nid = 1;
  core.NodeID src_nid = 2;
  uint32 hop_count = 3;
  uint32 id = 4;
  uint32 mode = 5;
  uint32 channel = 6;
  uint32 command_id = 7;
  bytes content = 8;
}

message Auth {
  string version = 1;
  uint32 hint = 2;
  string token = 3;
}

message AuthSuccess {
  string config = 1;
}

message Hint {
  uint32 hint = 1;
}
